// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabContainer renders correctly 1`] = `
<div
  className="TabContainer"
>
  <div
    className="react-tabs"
    data-tabs={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <ul
      className="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        className="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-0"
        role="tab"
        tabIndex="0"
      >
        Standard
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-2"
        role="tab"
        tabIndex={null}
      >
        @Import
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      className="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        className="TabContainer__Tab--Content"
      >
        <h4>
          Embed Font
        </h4>
        To embed your selected fonts into a webpage, copy this code into the &lt;head&gt; of your HTML document.
        <div
          className="Info-Font"
        >
          <span>
            &lt;link href="https://fonts.googleapis.com/css?family=
            <span
              className="Text__bold"
            >
              oswald
            </span>
            " rel="stylesheet"&gt;
          </span>
          <div
            className="CopyContent"
          >
            <i
              className="fa fa-copy"
              data-item="<link href=\\"https://fonts.googleapis.com/css?family=oswald\\" rel=\\"stylesheet\\">"
              onClick={[Function]}
              onMouseLeave={[Function]}
            />
            <span
              className="CopyContent__TitlePopUp"
            >
              Click to Copy
            </span>
          </div>
        </div>
      </div>
      <div
        className="TabContainer__Tab--Content"
      >
        <h4>
          Specify in CSS
        </h4>
        Use the following CSS rules to specify these families:
        <div
          className="Info-Font"
        >
          <span>
            font-family: 
            oswald, sans-serif
            ;
          </span>
          <div
            className="CopyContent"
          >
            <i
              className="fa fa-copy"
              data-item="font-family: oswald, sans-serif;"
              onClick={[Function]}
              onMouseLeave={[Function]}
            />
            <span
              className="CopyContent__TitlePopUp"
            >
              Click to Copy
            </span>
          </div>
        </div>
        <strong>
          Goolgle Fonts:
        </strong>
        <a
          className="Link"
          href="https://fonts.google.com/specimen/oswald"
          target="_blank"
        >
          https://fonts.google.com/specimen/
          oswald
        </a>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      className="react-tabs__tab-panel"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`TabContainer renders correctly font-family has space 1`] = `
<div
  className="TabContainer"
>
  <div
    className="react-tabs"
    data-tabs={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <ul
      className="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        className="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-4"
        role="tab"
        tabIndex="0"
      >
        Standard
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-6"
        role="tab"
        tabIndex={null}
      >
        @Import
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      className="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        className="TabContainer__Tab--Content"
      >
        <h4>
          Embed Font
        </h4>
        To embed your selected fonts into a webpage, copy this code into the &lt;head&gt; of your HTML document.
        <div
          className="Info-Font"
        >
          <span>
            &lt;link href="https://fonts.googleapis.com/css?family=
            <span
              className="Text__bold"
            >
              some+font+family
            </span>
            " rel="stylesheet"&gt;
          </span>
          <div
            className="CopyContent"
          >
            <i
              className="fa fa-copy"
              data-item="<link href=\\"https://fonts.googleapis.com/css?family=some font family\\" rel=\\"stylesheet\\">"
              onClick={[Function]}
              onMouseLeave={[Function]}
            />
            <span
              className="CopyContent__TitlePopUp"
            >
              Click to Copy
            </span>
          </div>
        </div>
      </div>
      <div
        className="TabContainer__Tab--Content"
      >
        <h4>
          Specify in CSS
        </h4>
        Use the following CSS rules to specify these families:
        <div
          className="Info-Font"
        >
          <span>
            font-family: 
            some font family, sans-serif
            ;
          </span>
          <div
            className="CopyContent"
          >
            <i
              className="fa fa-copy"
              data-item="font-family: some font family, sans-serif;"
              onClick={[Function]}
              onMouseLeave={[Function]}
            />
            <span
              className="CopyContent__TitlePopUp"
            >
              Click to Copy
            </span>
          </div>
        </div>
        <strong>
          Goolgle Fonts:
        </strong>
        <a
          className="Link"
          href="https://fonts.google.com/specimen/some+font+family"
          target="_blank"
        >
          https://fonts.google.com/specimen/
          some+font+family
        </a>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      className="react-tabs__tab-panel"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;
